@@ -9,6 +9,8 @@ language-selector (0.70) UNRELEASED; urgency=low
     - Use list comprehensions rather than filter.
     - Use new-style octal literals.
     - Use str() rather than unicode() in Python 3.
+    - Open subprocesses with universal_newlines=True when expecting to read
+      text from them.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 07 May 2012 16:13:22 +0100
 
